--- a/Develop/style.css
+++ b/Develop/style.css
@@ -1,3 +1,4 @@
+/* Element Styling */
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
@@ -12,6 +13,8 @@ textarea {
   padding: 10px;
 }
 
+
+/* Class and ID Styling */
 .description {
   white-space: pre-wrap;
 }
